# matrix_sign_function

./: CMakeLists.txt  COPYRIGHT.md  INSTALL.md  README.md
include/: MatrixSignFunction.h
scripts/: matrix_sign_function.py
src/: MatrixSignFunction.cpp  main.cpp
